--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Monika Bastron — Designer</title>
+<title>Monika B — Designer</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;1,300;1,400&family=DM+Mono:wght@300;400&display=swap" rel="stylesheet">
 <style>
@@ -936,7 +936,7 @@
 
 <!-- NAV -->
 <nav>
-  <a href="#" class="nav-logo">M. Bastron</a>
+  <a href="#" class="nav-logo">Monika B.</a>
   <ul class="nav-links">
     <li><a href="#about">About</a></li>
     <li><a href="#services">Services</a></li>
@@ -948,9 +948,9 @@
 <!-- HERO -->
 <section class="hero">
   <div class="hero-left">
-    <p class="hero-eyebrow">Available for projects · 2025</p>
+    <p class="hero-eyebrow">Available for projects · 2026</p>
     <h1 class="hero-name">
-      Monika<br><em>Bastron</em>
+      Monika<br><em>B</em>
     </h1>
     <p class="hero-desc">
       A digital designer crafting thoughtful visual identities, immersive web experiences, and iconic graphics — where form meets intention.
@@ -1011,7 +1011,7 @@
         </div>
       </div>
 
-      <div class="hero-number">2025</div>
+      <div class="hero-number">2026</div>
     </div>
   </div>
 </section>
@@ -1023,7 +1023,7 @@
   <div class="about-label reveal">About</div>
   <div class="about-content">
     <h2 class="reveal reveal-delay-1">Designing with<br>purpose and <em>poetry</em></h2>
-    <p class="reveal reveal-delay-2">Based in Berlin, I am a multidisciplinary designer obsessed with the intersection of visual clarity and emotional resonance. My work spans brand identities, product interfaces, illustration systems, and everything in between.</p>
+    <p class="reveal reveal-delay-2">Based in Tbilisi, I am a multidisciplinary designer obsessed with the intersection of visual clarity and emotional resonance. My work spans brand identities, product interfaces, illustration systems, and everything in between.</p>
     <p class="reveal reveal-delay-3">With over 7 years in the craft, I've collaborated with startups, luxury brands, and creative studios — bringing a considered, craft-driven approach to every pixel.</p>
     <div class="about-stats reveal reveal-delay-4">
       <div class="stat">
@@ -1377,13 +1377,13 @@
 <section class="contact" id="contact">
   <div class="section-label reveal" style="margin-bottom:2rem;">Let's work together</div>
   <h2 class="reveal reveal-delay-1">Let's make<br>something <em>beautiful</em></h2>
-  <p class="contact-sub reveal reveal-delay-2">Available for freelance projects · Berlin / Remote</p>
-  <a href="mailto:hello@monikabastron.com" class="contact-email reveal reveal-delay-3">hello@monikabastron.com</a>
+  <p class="contact-sub reveal reveal-delay-2">Available for freelance projects · Tbilisi / Remote</p>
+  <a href="mailto:hellomb@gmail.com" class="contact-email reveal reveal-delay-3">hellomb@gmail.com</a>
 </section>
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2025 Monika Bastron. All rights reserved.</p>
+  <p>© 2026 Monika B. All rights reserved.</p>
   <ul class="footer-links">
     <li><a href="#">Behance</a></li>
     <li><a href="#">Dribbble</a></li>
